[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Rita <kapustnikova.rita@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.111.0"
isodate = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
